fixing double scrollbar

--- a/src/app/components/edit-user/edit-user.component.scss
+++ b/src/app/components/edit-user/edit-user.component.scss
@@ -1,73 +1,65 @@
-.black-screen {
+.container {
+  padding: 16px 24px;
+  text-align: center;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  z-index: 1000;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
+  background: #f9f9f9;
+  border-radius: 32px;
+  -webkit-box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
+  box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
+  z-index: 10;
 
-  .container {
-    padding: 16px 24px;
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #f9f9f9;
-    border-radius: 32px;
-    -webkit-box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
-    box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
+  img {
+    width: 100px;
+    border-radius: 50%;
+    margin-bottom: 16px;
+  }
 
-    img {
-      width: 100px;
-      border-radius: 50%;
-      margin-bottom: 16px;
+  .form-edit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    //background: yellow;
+
+    input {
+      background: none;
+      outline: none;
+      border: none;
+      border-radius: 32px;
+      padding: 8px 12px;
+      margin-bottom: 24px;
+      -webkit-box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
+      box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
+
+      &[type="submit"] {
+        width: 185px;
+        margin-top: 16px;
+        background: limegreen;
+        color: white;
+        font-weight: 700;
+        letter-spacing: 2px;
+        font-size: 18px;
+      }
     }
 
-    .form-edit {
+    .btn-inline {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      //background: yellow;
+      flex-direction: row;
+      width: 100%;
 
       input {
-        background: none;
-        outline: none;
-        border: none;
-        border-radius: 32px;
-        padding: 8px 12px;
-        margin-bottom: 24px;
-        -webkit-box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
-        box-shadow: 5px 5px 10px 1px rgba(48,48,48,0.4);
+        flex: 1;
+        color: white;
+        cursor: pointer;
 
-        &[type="submit"] {
-          width: 185px;
-          margin-top: 16px;
-          background: limegreen;
-          color: white;
-          font-weight: 700;
-          letter-spacing: 2px;
-          font-size: 18px;
+        &:first-child {
+          background: red;
         }
-      }
-
-      .btn-inline {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-
-        input {
-          flex: 1;
-          color: white;
-
-          &:first-child {
-            background: red;
-          }
-          &:last-child {
-            background: limegreen;
-            margin-left: 8px;
-          }
+        &:last-child {
+          background: limegreen;
+          margin-left: 8px;
         }
       }
     }
