--- a/src/app/pages/users-list-page/users-list-page.component.scss
+++ b/src/app/pages/users-list-page/users-list-page.component.scss
@@ -1,7 +1,10 @@
 .container {
-  position: relative;
   height: 100vh;
   overflow: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 // Style to desktop
